--- a/DSC_680_Supervised_Learning.ipynb
+++ b/DSC_680_Supervised_Learning.ipynb
@@ -8,7 +8,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyPIQi6hpzA7C1FBcYODto07",
+      "authorship_tag": "ABX9TyMY11V9mKYvPgs6i+JeQ4pa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -228,10 +228,10 @@
       },
       "source": [
         "# Importing data\n",
-        "# NN_103_output_df = pd.read_csv(\"gdrive/MyDrive/DSC-680/NN_103_score_df.cvs\")\n",
-        "# NN_202_output_df = pd.read_csv(\"gdrive/MyDrive/DSC-680/NN_202_score_df.cvs\")\n",
-        "# EU_103_output_df = pd.read_csv(\"gdrive/MyDrive/DSC-680/EU_103_score_df.cvs\")\n",
-        "# EU_202_output_df = pd.read_csv(\"gdrive/MyDrive/DSC-680/EU_202_score_df.cvs\")\n",
+        "NN_103_output_df = pd.read_csv(\"gdrive/MyDrive/DSC-680/NN_103_score_df.cvs\")\n",
+        "NN_202_output_df = pd.read_csv(\"gdrive/MyDrive/DSC-680/NN_202_score_df.cvs\")\n",
+        "EU_103_output_df = pd.read_csv(\"gdrive/MyDrive/DSC-680/EU_103_score_df.cvs\")\n",
+        "EU_202_output_df = pd.read_csv(\"gdrive/MyDrive/DSC-680/EU_202_score_df.cvs\")\n",
         "AS_103_output_df = pd.read_csv(\"gdrive/MyDrive/DSC-680/AS_103_score_df.cvs\")\n",
         "AS_202_output_df = pd.read_csv(\"gdrive/MyDrive/DSC-680/AS_202_score_df.cvs\")"
       ],
@@ -253,10 +253,10 @@
         "id": "up_AvSAXBnFT"
       },
       "source": [
-        "# NN_103_output_df = NN_103_output_df.sample(n=100000, random_state=42)\n",
-        "# NN_202_output_df = NN_202_output_df.sample(n=100000, random_state=42)\n",
-        "# EU_103_output_df = EU_103_output_df.sample(n=100000, random_state=42)\n",
-        "# EU_202_output_df = EU_202_output_df.sample(n=100000, random_state=42)\n",
+        "NN_103_output_df = NN_103_output_df.sample(n=100000, random_state=42)\n",
+        "NN_202_output_df = NN_202_output_df.sample(n=100000, random_state=42)\n",
+        "EU_103_output_df = EU_103_output_df.sample(n=100000, random_state=42)\n",
+        "EU_202_output_df = EU_202_output_df.sample(n=100000, random_state=42)\n",
         "AS_103_output_df = AS_103_output_df.sample(n=100000, random_state=42)\n",
         "AS_202_output_df = AS_202_output_df.sample(n=100000, random_state=42)"
       ],
@@ -357,16 +357,16 @@
         "sm = SMOTE(random_state=42, n_jobs=-1)\n",
         "\n",
         "# Apply SMOTE to North America\n",
-        "# NN_103_sm_output_df_x_train, NN_103_sm_output_df_y_train = sm.fit_resample(NN_103_output_df_x_train, NN_103_output_df_y_train)\n",
-        "# NN_103_sm_output_df_x_test, NN_103_sm_output_df_y_test = sm.fit_resample(NN_103_output_df_x_test, NN_103_output_df_y_test)\n",
-        "# NN_202_sm_output_df_x_train, NN_202_sm_output_df_y_train = sm.fit_resample(NN_202_output_df_x_train, NN_202_output_df_y_train)\n",
-        "# NN_202_sm_output_df_x_test, NN_202_sm_output_df_y_test = sm.fit_resample(NN_202_output_df_x_test, NN_202_output_df_y_test)\n",
+        "NN_103_sm_output_df_x_train, NN_103_sm_output_df_y_train = sm.fit_resample(NN_103_output_df_x_train, NN_103_output_df_y_train)\n",
+        "NN_103_sm_output_df_x_test, NN_103_sm_output_df_y_test = sm.fit_resample(NN_103_output_df_x_test, NN_103_output_df_y_test)\n",
+        "NN_202_sm_output_df_x_train, NN_202_sm_output_df_y_train = sm.fit_resample(NN_202_output_df_x_train, NN_202_output_df_y_train)\n",
+        "NN_202_sm_output_df_x_test, NN_202_sm_output_df_y_test = sm.fit_resample(NN_202_output_df_x_test, NN_202_output_df_y_test)\n",
         "\n",
         "#Apply SMOTE to Europe\n",
-        "# EU_103_sm_output_df_x_train, EU_103_sm_output_df_y_train = sm.fit_resample(EU_103_output_df_x_train, EU_103_output_df_y_train)\n",
-        "# EU_103_sm_output_df_x_test, EU_103_sm_output_df_y_test = sm.fit_resample(EU_103_output_df_x_test, EU_103_output_df_y_test)\n",
-        "# EU_202_sm_output_df_x_train, EU_202_sm_output_df_y_train = sm.fit_resample(EU_202_output_df_x_train, EU_202_output_df_y_train)\n",
-        "# EU_202_sm_output_df_x_test, EU_202_sm_output_df_y_test = sm.fit_resample(EU_202_output_df_x_test, EU_202_output_df_y_test)\n",
+        "EU_103_sm_output_df_x_train, EU_103_sm_output_df_y_train = sm.fit_resample(EU_103_output_df_x_train, EU_103_output_df_y_train)\n",
+        "EU_103_sm_output_df_x_test, EU_103_sm_output_df_y_test = sm.fit_resample(EU_103_output_df_x_test, EU_103_output_df_y_test)\n",
+        "EU_202_sm_output_df_x_train, EU_202_sm_output_df_y_train = sm.fit_resample(EU_202_output_df_x_train, EU_202_output_df_y_train)\n",
+        "EU_202_sm_output_df_x_test, EU_202_sm_output_df_y_test = sm.fit_resample(EU_202_output_df_x_test, EU_202_output_df_y_test)\n",
         "\n",
         "#Apply SMOTE to Asia\n",
         "AS_103_sm_output_df_x_train, AS_103_sm_output_df_y_train = sm.fit_resample(AS_103_output_df_x_train, AS_103_output_df_y_train)\n",
@@ -2223,12 +2223,12 @@
       },
       "source": [
         "# Merge predictions to North America\n",
-        "# NN_103_final_df = pd.DataFrame( np.column_stack((NN_103_sm_output_df_x_test.to_numpy(), NN_103_sm_output_final_pred)),  columns = ['TRANSACTION_MONTH','TRANSACTION_AMOUNT','FRAUD_LABEL'] )\n",
-        "# NN_202_final_df = pd.DataFrame( np.column_stack((NN_202_sm_output_df_x_test.to_numpy(), NN_202_sm_output_final_pred)),  columns = ['TRANSACTION_MONTH','TRANSACTION_AMOUNT','FRAUD_LABEL'] )\n",
+        "NN_103_final_df = pd.DataFrame( np.column_stack((NN_103_sm_output_df_x_test.to_numpy(), NN_103_sm_output_final_pred)),  columns = ['TRANSACTION_MONTH','TRANSACTION_AMOUNT','FRAUD_LABEL'] )\n",
+        "NN_202_final_df = pd.DataFrame( np.column_stack((NN_202_sm_output_df_x_test.to_numpy(), NN_202_sm_output_final_pred)),  columns = ['TRANSACTION_MONTH','TRANSACTION_AMOUNT','FRAUD_LABEL'] )\n",
         "\n",
         "# Merge predictions to Europe\n",
-        "# EU_103_final_df = pd.DataFrame( np.column_stack((EU_103_sm_output_df_x_test.to_numpy(), EU_103_sm_output_final_pred)),  columns = ['TRANSACTION_MONTH','TRANSACTION_AMOUNT','FRAUD_LABEL'] )\n",
-        "# EU_202_final_df = pd.DataFrame( np.column_stack((EU_202_sm_output_df_x_test.to_numpy(), EU_202_sm_output_final_pred)),  columns = ['TRANSACTION_MONTH','TRANSACTION_AMOUNT','FRAUD_LABEL'] )\n",
+        "EU_103_final_df = pd.DataFrame( np.column_stack((EU_103_sm_output_df_x_test.to_numpy(), EU_103_sm_output_final_pred)),  columns = ['TRANSACTION_MONTH','TRANSACTION_AMOUNT','FRAUD_LABEL'] )\n",
+        "EU_202_final_df = pd.DataFrame( np.column_stack((EU_202_sm_output_df_x_test.to_numpy(), EU_202_sm_output_final_pred)),  columns = ['TRANSACTION_MONTH','TRANSACTION_AMOUNT','FRAUD_LABEL'] )\n",
         "\n",
         "# Merge predictions to Asia\n",
         "AS_103_final_df = pd.DataFrame( np.column_stack((AS_103_sm_output_df_x_test.to_numpy(), AS_103_sm_output_final_pred)),  columns = ['TRANSACTION_MONTH','TRANSACTION_AMOUNT','FRAUD_LABEL'] )\n",
@@ -2252,10 +2252,10 @@
         "id": "koXciS14Z6GX"
       },
       "source": [
-        "# NN_103_final_df.to_csv('/content/gdrive/MyDrive/DSC-680/NN_103_final_df.csv', index=False)\n",
-        "# NN_202_final_df.to_csv('/content/gdrive/MyDrive/DSC-680/NN_202_final_df.csv', index=False)\n",
-        "# EU_103_final_df.to_csv('/content/gdrive/MyDrive/DSC-680/EU_103_final_df.csv', index=False)\n",
-        "# EU_202_final_df.to_csv('/content/gdrive/MyDrive/DSC-680/EU_202_final_df.csv', index=False)\n",
+        "NN_103_final_df.to_csv('/content/gdrive/MyDrive/DSC-680/NN_103_final_df.csv', index=False)\n",
+        "NN_202_final_df.to_csv('/content/gdrive/MyDrive/DSC-680/NN_202_final_df.csv', index=False)\n",
+        "EU_103_final_df.to_csv('/content/gdrive/MyDrive/DSC-680/EU_103_final_df.csv', index=False)\n",
+        "EU_202_final_df.to_csv('/content/gdrive/MyDrive/DSC-680/EU_202_final_df.csv', index=False)\n",
         "AS_103_final_df.to_csv('/content/gdrive/MyDrive/DSC-680/AS_103_final_df.csv', index=False)\n",
         "AS_202_final_df.to_csv('/content/gdrive/MyDrive/DSC-680/AS_202_final_df.csv', index=False)"
       ],
