--- a/DSC_680_Supervised_Learning.ipynb
+++ b/DSC_680_Supervised_Learning.ipynb
@@ -8,7 +8,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyMY11V9mKYvPgs6i+JeQ4pa",
+      "authorship_tag": "ABX9TyP8PlUIelth76P4BQG8DThv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -502,7 +502,7 @@
         "id": "s6kzGCXeEFEz"
       },
       "source": [
-        "### ***Artificial Neuro Network Predictions***"
+        "### ***Artificial Neural Network Predictions***"
       ]
     },
     {
@@ -2097,27 +2097,27 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 164
         },
         "id": "B3Pd7AAkj8ry",
-        "outputId": "f88c3b9b-d3bb-47fa-857f-010e302ae1c3"
+        "outputId": "436ab7e4-eb10-4157-e837-d4b892281e7c"
       },
       "source": [
         "AS_103_sm_output_rf_y_pred_test[AS_103_sm_output_rf_y_pred_test<1].shape"
       ],
-      "execution_count": 170,
+      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(59241,)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 170
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-a2920ab228e5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mAS_103_sm_output_rf_y_pred_test\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mAS_103_sm_output_rf_y_pred_test\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'AS_103_sm_output_rf_y_pred_test' is not defined"
+          ]
         }
       ]
     },
