--- a/DSC_680_Supervised_Learning.ipynb
+++ b/DSC_680_Supervised_Learning.ipynb
@@ -8,7 +8,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyMmFgKDwOxhWyuAAkY+YcCD",
+      "authorship_tag": "ABX9TyP/ZHnLucuYqd92qHgvSqt4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -231,12 +231,12 @@
       },
       "source": [
         "# Importing data\n",
-        "NN_103_output_df = pd.read_csv(\"gdrive/MyDrive/DSC-680/NN_103_score_df.cvs\")\n",
-        "NN_202_output_df = pd.read_csv(\"gdrive/MyDrive/DSC-680/NN_202_score_df.cvs\")\n",
-        "EU_103_output_df = pd.read_csv(\"gdrive/MyDrive/DSC-680/EU_103_score_df.cvs\")\n",
-        "EU_202_output_df = pd.read_csv(\"gdrive/MyDrive/DSC-680/EU_202_score_df.cvs\")\n",
-        "AS_103_output_df = pd.read_csv(\"gdrive/MyDrive/DSC-680/AS_103_score_df.cvs\")\n",
-        "AS_202_output_df = pd.read_csv(\"gdrive/MyDrive/DSC-680/AS_202_score_df.cvs\")"
+        "NN_103_output_df = pd.read_csv(\"gdrive/MyDrive/DSC-680/NN_103_score_df.csv\")\n",
+        "NN_202_output_df = pd.read_csv(\"gdrive/MyDrive/DSC-680/NN_202_score_df.csv\")\n",
+        "EU_103_output_df = pd.read_csv(\"gdrive/MyDrive/DSC-680/EU_103_score_df.csv\")\n",
+        "EU_202_output_df = pd.read_csv(\"gdrive/MyDrive/DSC-680/EU_202_score_df.csv\")\n",
+        "AS_103_output_df = pd.read_csv(\"gdrive/MyDrive/DSC-680/AS_103_score_df.csv\")\n",
+        "AS_202_output_df = pd.read_csv(\"gdrive/MyDrive/DSC-680/AS_202_score_df.csv\")"
       ],
       "execution_count": null,
       "outputs": []
