--- a/DSC_680_Unsupervised_Learning.ipynb
+++ b/DSC_680_Unsupervised_Learning.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyOaVlqLSxWTdS0yzjHWP2K2",
+      "authorship_tag": "ABX9TyPwn3m9urGZy0Ua5gL71zhe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -90,7 +90,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive/', force_remount=True)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -185,7 +185,7 @@
       "source": [
         "input_data.head()"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -327,7 +327,7 @@
       "source": [
         "input_data.shape"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -355,7 +355,7 @@
       "source": [
         "input_data.dtypes"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -403,7 +403,7 @@
       "source": [
         "input_data['TRXN_MONTH'].corr(input_data['TRANSACTION_AMOUNT'])"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -663,7 +663,7 @@
         "NN_103_score_df = ensemble_fun (NN_103_df, n_neighbors_n=20, leaf_size=30, pairwise_n=2, n_estimators_n=100, random_state_n=42, contamination_n='auto')\n",
         "NN_103_score_df"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -927,7 +927,7 @@
         "NN_202_score_df = ensemble_fun (NN_202_df, n_neighbors_n=20, leaf_size=30, pairwise_n=2, n_estimators_n=100, random_state_n=42, contamination_n='auto')\n",
         "NN_202_score_df"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1191,7 +1191,7 @@
         "EU_103_score_df = ensemble_fun (EU_103_df, n_neighbors_n=20, leaf_size=30, pairwise_n=2, n_estimators_n=100, random_state_n=42, contamination_n='auto')\n",
         "EU_103_score_df"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1455,7 +1455,7 @@
         "EU_202_score_df = ensemble_fun (EU_202_df, n_neighbors_n=20, leaf_size=30, pairwise_n=2, n_estimators_n=100, random_state_n=42, contamination_n='auto')\n",
         "EU_202_score_df"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1719,7 +1719,7 @@
         "AS_103_score_df = ensemble_fun (AS_103_df, n_neighbors_n=20, leaf_size=30, pairwise_n=2, n_estimators_n=100, random_state_n=42, contamination_n='auto')\n",
         "AS_103_score_df"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1983,7 +1983,7 @@
         "AS_202_score_df = ensemble_fun (AS_202_df, n_neighbors_n=20, leaf_size=30, pairwise_n=2, n_estimators_n=100, random_state_n=42, contamination_n='auto')\n",
         "AS_202_score_df"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2248,14 +2248,14 @@
         "id": "koXciS14Z6GX"
       },
       "source": [
-        "NN_103_score_df.to_csv('/content/gdrive/MyDrive/DSC-680/NN_103_score_df.cvs',index=False)\n",
-        "NN_202_score_df.to_csv('/content/gdrive/MyDrive/DSC-680/NN_202_score_df.cvs',index=False)\n",
-        "EU_103_score_df.to_csv('/content/gdrive/MyDrive/DSC-680/EU_103_score_df.cvs',index=False)\n",
-        "EU_202_score_df.to_csv('/content/gdrive/MyDrive/DSC-680/EU_202_score_df.cvs',index=False)\n",
-        "AS_103_score_df.to_csv('/content/gdrive/MyDrive/DSC-680/AS_103_score_df.cvs',index=False)\n",
-        "AS_202_score_df.to_csv('/content/gdrive/MyDrive/DSC-680/AS_202_score_df.cvs',index=False)"
+        "NN_103_score_df.to_csv('/content/gdrive/MyDrive/DSC-680/NN_103_score_df.csv',index=False)\n",
+        "NN_202_score_df.to_csv('/content/gdrive/MyDrive/DSC-680/NN_202_score_df.csv',index=False)\n",
+        "EU_103_score_df.to_csv('/content/gdrive/MyDrive/DSC-680/EU_103_score_df.csv',index=False)\n",
+        "EU_202_score_df.to_csv('/content/gdrive/MyDrive/DSC-680/EU_202_score_df.csv',index=False)\n",
+        "AS_103_score_df.to_csv('/content/gdrive/MyDrive/DSC-680/AS_103_score_df.csv',index=False)\n",
+        "AS_202_score_df.to_csv('/content/gdrive/MyDrive/DSC-680/AS_202_score_df.csv',index=False)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     }
   ]
